fix(golangci-lint): run golangci-lint on whole workspace

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,13 @@ repos:
         language_version: system
         stages: [commit-msg]
         additional_dependencies: ["@commitlint/config-conventional"]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.4.0 # Use the ref you want to point at
+    hooks:
+      - id: check-json
+      - id: check-yaml
+      - id: pretty-format-json
+        args:
+          - --autofix
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
