--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -77,6 +77,7 @@
   entry: hooks/golang/golangci-lint.sh
   language: script
   files: \.go$
+  pass_filenames: false
 - id: golangci-lint-mod
   name: 'golangci-lint-mod: Lint go modules'
   entry: hooks/golang/golangci-lint-mod.sh
