--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: go-semantic-release/action@v1
         with:
-          github-token: ${{ secrets.ROLLSBOT_GITHUB_ACTIONS_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
