feat(yaml): adds hook that enforces yaml file extension
This adds a new pre-commit hook that will enforce consistent yaml file extensions as `.yaml`.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,10 @@ repos:
           - --autofix
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: local
+    hooks:
+      - id: yaml-extension
+        name: "Ensure yaml files use .yaml"
+        entry: ./hooks/yaml/yaml-extension.sh
+        language: script
+        files: \.yml$
