fix: use custom script instead of depending on yalc
that way we don't have to install yalc in CI environments
labelled as a fix to trigger a release

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -94,7 +94,7 @@
   language: script
   files: \.yml$
   ######################
-# Yalc related hook - requires yalc to run
+# Yalc related hook
 - id: yalc-check
   name: "Ensure no yalc dependencies are staged"
   description: "Errors if there are staged yalc dependencies"
