feat: add cspell common dictionary and example snippet

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,7 @@ repos:
         entry: ./hooks/yaml/yaml-extension.sh
         language: script
         files: \.yml$
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v8.3.0
+    hooks:
+      - id: cspell
