--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -95,3 +95,15 @@
   language: script
   entry: hooks/yalc/yalc-check.sh
   files: package\.json
+# CSpell hook
+- id: cspell
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v8.3.0
+    hooks:
+      - id: cspell
+    dictionaryDefinitions:
+      - name: common
+        path: ./cspell/dictionaries/common.txt
+        addWords: true
+    dictionaries:
+      - common
