--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,18 @@
 name: CI
 
 on:
+  workflow_dispatch:
+  pull_request:
   push:
-
+    branches: [main]
 jobs:
 
   release-notes:
     name: Release notes preview
     runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main'
+    if: github.event_name == 'pull_request'
     steps:
-      - uses: open-turo/actions-release/release-notes-preview@v2
+      - uses: open-turo/actions-release/lint-release-notes@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
         env:
@@ -20,10 +22,10 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: open-turo/action-pre-commit@v1
+      - uses: open-turo/action-pre-commit@v3
 
   test:
     name: Test
