--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,20 +1,23 @@
 name: Release
-# Only release when we merge to main
+
 on:
   push:
-    branches: [main, "[0-9]+.x"]
-  workflow_dispatch: # enable manual release
-
-# Handle release versioning automatically with semantic release
+    branches: [main, "v*"]
+  workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
-  semantic-release:
+  release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, general-ubuntu]
+    env:
+      NODE_MODULES_CACHE_BUCKET_NAME: core-servi-github-actions-build-cach20240118162152102700000001
+      NODE_MODULES_CACHE_BUCKET_REGION: us-east-1
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - uses: open-turo/actions-release/semantic-release@v2
+      - uses: open-turo/actions-node/release@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          extra-plugins: |
-            @open-turo/semantic-release-config
+          github-token: ${{ secrets.TURO_GITHUB_TOKEN }}
+          npm-auth-token: ${{ secrets.ARTIFACTORY_NPM_AUTH_TOKEN }}
+          s3-bucket-name: ${{ env.NODE_MODULES_CACHE_BUCKET_NAME }}
+          s3-bucket-region: ${{ env.NODE_MODULES_CACHE_BUCKET_REGION }}
