--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,18 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Release
     steps:
-      - uses: actions/create-github-app-token@v2
-        id: app-token
-        with:
-          app-id: ${{ secrets.TURO_GITHUB_WORKFLOWS_APP_ID }}
-          private-key: ${{ secrets.TURO_GITHUB_WORKFLOWS_APP_PRIVATE_KEY }}
-          # Creates a token for all the repositories in the current owner's (turo) installation
-          # See this for more information: https://github.com/actions/create-github-app-token?tab=readme-ov-file#create-a-token-for-all-repositories-in-the-current-owners-installation
-          owner: ${{ github.repository_owner }}
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Lint
         uses: open-turo/action-pre-commit@v1
       - uses: open-turo/actions-release/semantic-release@v3
         with:
-          github-token: ${{ steps.app-token.outputs.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
